# agent-workspace

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: deploy-production.yml
deploy/nginx/: wspace.cleadwine.ru.conf
deploy/production/: .env.example  docker-compose.yml
docs/: deployment.md
docs/adr/: 0001-bootstrap-architecture.md  0002-asset-storage.md
docs/specification/: api-contract.md  architecture-views.md  database-schema.md  implementation-backlog.md  product-spec.md  ui-structure.md
docs/university/: tz-analysis.md  tz-example-from-docx.md  ТЗ (пример).docx
docs/university/architecture/: main.tex
docs/university/architecture/content/: appendix.tex  c4-model.tex  conclusion.tex  database-architecture.tex  design-patterns.tex  logical-architecture.tex  terms.tex  titlepage.tex
docs/university/architecture/diagrams/: c4-containers.txt  erd-database.txt  uml-logical-components.txt
docs/university/deploy/: diplom_style.sty  main.tex
docs/university/deploy/content/: appendix.tex  bibliography.tex  deployment-algorithm.tex  deployment-justification.tex  deployment-methods.tex  preliminary-requirements.tex  titlepage.tex
docs/university/deploy/diagrams/: deployment-algorithm.txt
docs/university/novsu-thesis-template-main/content/: example.tex  titlepage.tex
docs/university/proto/: main.tex
docs/university/proto/content/: appendix.tex  modules.tex  (+4 more)
docs/university/scenarii/: README.md  main.tex
docs/university/specification/: .gitignore  main.tex
docs/university/tz/: diplom_style.sty  main.tex
infra/docker/: api.Dockerfile  mcp-bridge.Dockerfile  web.Dockerfile
scripts/: deploy-production.ps1
services/api/: Cargo.toml
services/api/migrations/: 001_initial_schema.sql  002_auth_sessions.sql  003_audit_events_fk_actions.sql  004_members_access.sql
services/api/migrations_sqlite/: 001_initial_schema.sql  002_auth_sessions.sql  003_audit_events_fk_actions.sql  004_members_access.sql  005_workspace_invite_tokens.sql
services/api/src/: app.rs  lib.rs  main.rs  state.rs  telemetry.rs
services/api/src/db/: config.rs  error.rs  mod.rs  pool.rs  tx.rs
services/api/src/http/: access.rs  actor.rs  audit.rs  changes.rs  error.rs  mod.rs  pagination.rs  request_id.rs  response.rs
services/api/src/modules/: activity.rs  agent_credentials.rs  agents.rs  assets.rs  auth.rs  documents.rs  integration_connections.rs  knowledge_base.rs  mod.rs  search_indexing.rs  system.rs  task_management.rs  task_structure.rs  workspace_admin.rs
services/api/src/modules/workspace_core/: domain.rs  handlers.rs  mod.rs  repo.rs
services/api/src/testing/: fixtures.rs  mod.rs
tools/mcp-bridge/: Cargo.toml
tools/mcp-bridge/src/: main.rs
web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/api/: activity.ts  agents.ts  assets.ts  auth.ts  client.ts  documents.ts  index.ts  integration-connections.ts  members.ts  notes.ts  query-keys.ts  search.ts  tasks.ts  types.ts  workspaces.ts
web/src/app/: router.tsx
web/src/hooks/: useActivity.ts  useAgents.ts  useAssets.ts  useDocuments.ts  useIntegrationConnections.ts  useMembers.ts  useNotes.ts  useSearch.ts  useSession.ts  useTasks.ts  useWorkspaces.ts
web/src/mocks/: data.ts  handlers.ts
web/src/providers/: QueryProvider.tsx
(+71 files in other folders)
