[package]
name = "agent-workspace-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
uuid.workspace = true
time.workspace = true
config.workspace = true
futures.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
