[package]
name = "agent-workspace-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
uuid.workspace = true
config.workspace = true
futures.workspace = true
hex.workspace = true
sha2.workspace = true
reqwest.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
