[package]
name = "agent-workspace-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
schemars = "1.2"
rmcp = { version = "1.6.0", features = ["server", "schemars", "transport-io"] }
